--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
   <body>
     <p>It was a dark and stormy night...</p>
     <p>How stormy was it?</p>
+    <p>A gentle breeze</p>
   </body>
 </html>
