added fifth line to story

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <p>How stormy was it?</p>
     <p>A gentle breeze</p>
     <p>named hurricane Irma.</p>
+	<p>It pranced and played about Florida.</p>
   </body>
 </html>
